src/test/resources/extension/valid/control/changeLoopVar.awsl
begin

for int i in 0..100 do
    println i;
    i = i + 1;
done;

end