src/test/resources/extension/invalid/control/overrideLoopVar.awsl
begin

for int i in 1..10 do
    int i = 10; # error!
done

end